[package]
name = "manytasks"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = [
    # Alphabetical by surname
    "Tim Bannister <tim@scalefactory.com>",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nix = "0.23.0"
libc = "0.2"
errno = "0.2.8"
